# phdb-plugin-example

./: .gitignore  CLAUDE-INIT.md  LICENSE  README.md  pyproject.toml
src/phdb_plugin_example/: __init__.py  ingest.py  plugin.py  plugin.toml
tests/: conftest.py  test_plugin.py
tests/fixtures/: weather-2026-05-20.json  weather-2026-05-21.json  weather-2026-05-22.json
