[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phdb-plugin-example"
version = "0.1.0"
description = "Example third-party phdb plugin — weather log ingester."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "phdb contributors" }]
dependencies = [
    "personal-history-db>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.entry-points."phdb.plugins"]
weather_log = "phdb_plugin_example.plugin:WeatherLogPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
phdb_plugin_example = ["plugin.toml"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
